add datamigration to JS

--- a/index.html
+++ b/index.html
@@ -12,31 +12,19 @@
     <div class="mainCard">
 
         <div class="imageSide">
-            <img id="poster" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRam_UTtsl8bwBxxKNeBtG-i5wyW2H0ozBndpMlcO8LSIYNTQ3J7w">
+            <img id="poster">
         </div>
 
         <div class="textSide">
-            <h2 class="title" >The Hobbit</h2>
-            <p class="text"><em>(1977)</em> Lorem ipsum dolor sit amet, dignissim mauris, facilisis et,
-                viverra volutpat nulla, vel lectus augue non accumsan metus libero.
-                Nibh odio imperdiet eu parturient, sed feugiat tempus id justo eros sapien,
-                phasellus tempus blandit, dis feugiat. Gravida laoreet aliquam risus donec morbi,
-                porta id. Purus elit augue habitasse rutrum id, a felis. Fusce et ipsum ligula,
-                sed pede class nulla placerat. Dui in cras nulla euismod mi, magna sollicitudin,
-                tempus sed vehicula orci mi, in amet consectetuer praesent donec quisque
-                consectetuer, orci massa.
-            </p>
-            <ul>
-                <li> Brother Theodore</li>
-                <li>John Huston</li>
-                <li>Orson Bean</li>
-
-            </ul>
-
+            <h2 id="title" ></h2>
+            <p id="text"></p>
+            <ul id="actorList"></ul>
         </div>
 
-
     </div>
+
+    <script src="data.js"></script>
+    <script src="code.js"></script>
     
 </body>
 </html>
