add rating stars

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
         <div class="textSide">
             <h2 id="title" ></h2>
+            <div id="stars">
+                    <span id="star1" class="emptyStar">&#9733;</span>
+                    <span id="star2" class="emptyStar">&#9733;</span>
+                    <span id="star3" class="emptyStar">&#9733;</span>
+                    <span id="star4" class="emptyStar">&#9733;</span>
+                    <span id="star5" class="emptyStar">&#9733;</span>
+            </div>
             <p id="text"></p>
             <ul id="actorList"></ul>
         </div>
