--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="data.js"></script>
     <script src="code.js"></script>
     
