--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Moviereview</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">    
 </head>
 <body>
 
@@ -18,11 +19,11 @@
         <div class="textSide">
             <h2 id="title" ></h2>
             <div id="stars">
-                    <span id="star1" class="emptyStar">&#9733;</span>
-                    <span id="star2" class="emptyStar">&#9733;</span>
-                    <span id="star3" class="emptyStar">&#9733;</span>
-                    <span id="star4" class="emptyStar">&#9733;</span>
-                    <span id="star5" class="emptyStar">&#9733;</span>
+                    <span id="star1" class="emptyStar">&#9728;</span>
+                    <span id="star2" class="emptyStar">&#9728;</span>
+                    <span id="star3" class="emptyStar">&#9728;</span>
+                    <span id="star4" class="emptyStar">&#9728;</span>
+                    <span id="star5" class="emptyStar">&#9728;</span>
             </div>
             <p id="text"></p>
             <ul id="actorList"></ul>
