--- a/template.html
+++ b/template.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">    
 </head>
-<body>
+<body ng-app="reviewApp" ng-cloak>
 
-    <div class="mainCard">
+    <div ng-controller="reviewController" class="mainCard">
+
+        <p>{{message}} {{greeting}}</p>               
 
         <div class="imageSide">
             <img id="poster">
