--- a/template.html
+++ b/template.html
@@ -11,9 +11,7 @@
 </head>
 <body ng-app="reviewApp" ng-cloak>
 
-    <div ng-controller="reviewController" class="mainCard">
-
-                    
+    <div ng-controller="reviewController" class="mainCard">                    
 
         <div class="imageSide">
             <img ng-src ={{movie.imageSrc}} id="poster">
@@ -34,7 +32,7 @@
             </ul>
         </div>
 
-    </div>s
+    </div>
 
     <script src="bundle.js"></script>    
     
